--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
     <h1>LazyKubectl</h1>
     <div id="app"></div>
     <script src="renderer.js"></script>
+
+    <p>We are using Node.js <span id="node-version"></span>,</p>
+    <p>Chromium <span id="chrome-version"></span>,</p>
+    <p>and Electron <span id="electron-version"></span>.</p>
 </body>
 </html>
